remove running text

--- a/sudoku_solver_2_0.ipynb
+++ b/sudoku_solver_2_0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOm7k5huxoCwjf5tNuO4kSq",
+      "authorship_tag": "ABX9TyOqYaqCH5w5Zp1fIeyvrywS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,8 @@
         "\n",
         "1. upload image\n",
         "2. run imports\n",
-        "3. run algorethms\n",
+        "3. run functions\n",
+        "4. run algorethms\n",
         "\n",
         "---\n",
         "\n",
@@ -50,10 +51,10 @@
         "\n",
         "1. extraction board\n",
         "  1. finding biggest square\n",
-        "  2. bla bla\n",
+        "  2.\n",
         "2. filtering cells\n",
-        "  1. bla bla\n",
-        "  2. more bla\n"
+        "  1.\n",
+        "  2.\n"
       ],
       "metadata": {
         "id": "qx6NrSbm7rWy"
@@ -90,69 +91,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "XCdk-SUr7Fzw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2d440cda-3595-4c84-a7ff-e9b5b1c98abc"
+        "id": "XCdk-SUr7Fzw"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  tesseract-ocr-eng tesseract-ocr-osd\n",
-            "The following NEW packages will be installed:\n",
-            "  tesseract-ocr tesseract-ocr-eng tesseract-ocr-osd\n",
-            "0 upgraded, 3 newly installed, 0 to remove and 45 not upgraded.\n",
-            "Need to get 4,816 kB of archives.\n",
-            "After this operation, 15.6 MB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu jammy/universe amd64 tesseract-ocr-eng all 1:4.00~git30-7274cfa-1.1 [1,591 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu jammy/universe amd64 tesseract-ocr-osd all 1:4.00~git30-7274cfa-1.1 [2,990 kB]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu jammy/universe amd64 tesseract-ocr amd64 4.1.1-2.1build1 [236 kB]\n",
-            "Fetched 4,816 kB in 1s (5,455 kB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 3.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package tesseract-ocr-eng.\n",
-            "(Reading database ... 121918 files and directories currently installed.)\n",
-            "Preparing to unpack .../tesseract-ocr-eng_1%3a4.00~git30-7274cfa-1.1_all.deb ...\n",
-            "Unpacking tesseract-ocr-eng (1:4.00~git30-7274cfa-1.1) ...\n",
-            "Selecting previously unselected package tesseract-ocr-osd.\n",
-            "Preparing to unpack .../tesseract-ocr-osd_1%3a4.00~git30-7274cfa-1.1_all.deb ...\n",
-            "Unpacking tesseract-ocr-osd (1:4.00~git30-7274cfa-1.1) ...\n",
-            "Selecting previously unselected package tesseract-ocr.\n",
-            "Preparing to unpack .../tesseract-ocr_4.1.1-2.1build1_amd64.deb ...\n",
-            "Unpacking tesseract-ocr (4.1.1-2.1build1) ...\n",
-            "Setting up tesseract-ocr-eng (1:4.00~git30-7274cfa-1.1) ...\n",
-            "Setting up tesseract-ocr-osd (1:4.00~git30-7274cfa-1.1) ...\n",
-            "Setting up tesseract-ocr (4.1.1-2.1build1) ...\n",
-            "Processing triggers for man-db (2.10.2-1) ...\n",
-            "Collecting pytesseract\n",
-            "  Downloading pytesseract-0.3.10-py3-none-any.whl (14 kB)\n",
-            "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.10/dist-packages (from pytesseract) (24.0)\n",
-            "Requirement already satisfied: Pillow>=8.0.0 in /usr/local/lib/python3.10/dist-packages (from pytesseract) (9.4.0)\n",
-            "Installing collected packages: pytesseract\n",
-            "Successfully installed pytesseract-0.3.10\n",
-            "Collecting py-sudoku\n",
-            "  Downloading py_sudoku-1.0.3-py3-none-any.whl (7.1 kB)\n",
-            "Installing collected packages: py-sudoku\n",
-            "Successfully installed py-sudoku-1.0.3\n",
-            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.10/dist-packages (4.8.0.76)\n",
-            "Requirement already satisfied: numpy>=1.21.2 in /usr/local/lib/python3.10/dist-packages (from opencv-python) (1.25.2)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!sudo apt install tesseract-ocr\n",
         "!pip install pytesseract\n",
@@ -187,7 +130,7 @@
       "metadata": {
         "id": "jVZ_JssPAZwh"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "pzqG_v_XI7k8"
       },
@@ -397,24 +340,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-3WdjjEcI9b2",
-        "outputId": "70fadb87-c132-4d6d-8ee8-5473a3496fa4"
+        "id": "-3WdjjEcI9b2"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[None, 7, 9, 2, None, 4, None, None, None], [None, 1, 8, 3, None, 6, None, None, 2], [2, None, None, None, 8, None, 5, 6, None], [None, None, None, 9, 2, 7, None, 4, 6], [7, 3, None, 4, None, None, None, 2, 8], [4, None, None, 6, 3, None, None, 5, None], [3, 2, 4, 8, None, 1, None, None, 5], [None, None, 7, None, None, 2, 1, None, 9], [None, None, None, None, 6, 3, None, 8, 4]]\n",
-            "[[6, 7, 9, 2, 5, 4, 8, 1, 3], [5, 1, 8, 3, 7, 6, 4, 9, 2], [2, 4, 3, 1, 8, 9, 5, 6, 7], [1, 8, 5, 9, 2, 7, 3, 4, 6], [7, 3, 6, 4, 1, 5, 9, 2, 8], [4, 9, 2, 6, 3, 8, 7, 5, 1], [3, 2, 4, 8, 9, 1, 6, 7, 5], [8, 6, 7, 5, 4, 2, 1, 3, 9], [9, 5, 1, 7, 6, 3, 2, 8, 4]]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "game = load_sudoku(puzzle.board)\n",
         "print(game.board)\n",
