commenting and code cleaning

--- a/sudoku_solver_2_0.ipynb
+++ b/sudoku_solver_2_0.ipynb
@@ -350,22 +350,25 @@
     {
       "cell_type": "code",
       "source": [
-        "def put_solution_on_board(board, rectangles, puzzle_board):\n",
-        "  \"\"\"get the cell content from the image with OCR\n",
+        "def put_solution_on_board(board, rectangles, sudoku_solution, sudoku_board):\n",
+        "  \"\"\"put the solution on the board\n",
         "\n",
         "  Args:\n",
-        "    cell (cv2 image) - an image with a single digit\n",
+        "    board (cv2 image) - image of the board\n",
+        "    rectangles (list of [x,y,w,h]) - list of cell position and size\n",
+        "    sudoku_solution (list of lists) - the solved sudoku\n",
+        "    sudoku_board (list of lists) - the original sudoku\n",
         "\n",
         "  Returns:\n",
-        "    number (int) - the digit in the cell\n",
+        "    board_solved (cv2 image) - image of the board with the solution\n",
         "  \"\"\"\n",
         "  board_solved=board.copy()\n",
         "  for i in range(len(rectangles)):\n",
         "    x,y,w,h=rectangles[i]\n",
-        "    if (puzzle_board[i]!=None):\n",
-        "      cv2.putText(board_solved, str(sudoku_solution_board[i]), (x,y+20),cv2.FONT_HERSHEY_SIMPLEX,1 ,(0,255,0),2 ,cv2.LINE_AA)\n",
+        "    if (sudoku_board[i]!=None):\n",
+        "      cv2.putText(board_solved, str(sudoku_solution[i]), (x,y+20),cv2.FONT_HERSHEY_SIMPLEX,1 ,(0,255,0),2 ,cv2.LINE_AA)\n",
         "    else:\n",
-        "      cv2.putText(board_solved, str(sudoku_solution_board[i]), (x + int(w/3), y + int(2*h/3)),cv2.FONT_HERSHEY_SIMPLEX,2,(255,0,255) ,3 ,cv2.LINE_AA)\n",
+        "      cv2.putText(board_solved, str(sudoku_solution[i]), (x + int(w/3), y + int(2*h/3)),cv2.FONT_HERSHEY_SIMPLEX,2,(255,0,255) ,3 ,cv2.LINE_AA)\n",
         "  return board_solved"
       ],
       "metadata": {
@@ -378,17 +381,18 @@
       "cell_type": "code",
       "source": [
         "def put_board_on_image(img, board_points_on_image, board):\n",
-        "  \"\"\"get the cell content from the image with OCR\n",
+        "  \"\"\"put board on image\n",
         "\n",
         "  Args:\n",
-        "    cell (cv2 image) - an image with a single digit\n",
+        "    img (cv2 image) - an image with a single digit\n",
+        "    board_points_on_image (list of [x,y]) - list of board positions on image\n",
+        "    board (cv2 image) - image of the board\n",
         "\n",
         "  Returns:\n",
-        "    number (int) - the digit in the cell\n",
+        "    img_solved (int) - the digit in the cell\n",
         "  \"\"\"\n",
         "  dst_points = np.array(board_points_on_image, dtype=np.float32)\n",
         "\n",
-        "  img_solved = img.copy()\n",
         "  # Define the points on the small image (source points)\n",
         "  h, w, _ = board.shape\n",
         "  src_points = np.array([[0, 0], [w, 0], [w, h], [0, h]], dtype=np.float32)\n",
@@ -397,25 +401,25 @@
         "  M = cv2.getPerspectiveTransform(src_points, dst_points)\n",
         "\n",
         "  # Apply the perspective transformation to the small image\n",
-        "  warped_img = cv2.warpPerspective(board, M, (img_solved.shape[1], img_solved.shape[0]))\n",
+        "  warped_img = cv2.warpPerspective(board, M, (img.shape[1], img.shape[0]))\n",
         "\n",
         "  # Create a mask of the warped image to overlay\n",
-        "  mask = np.zeros_like(img_solved, dtype=np.uint8)\n",
+        "  mask = np.zeros_like(img, dtype=np.uint8)\n",
         "  cv2.fillConvexPoly(mask, dst_points.astype(int), (255, 255, 255))\n",
         "\n",
         "  # Invert the mask to create a region of interest (ROI)\n",
         "  mask_inv = cv2.bitwise_not(mask)\n",
         "\n",
         "  # Black-out the area of the small image in the large image\n",
-        "  large_img_bg = cv2.bitwise_and(img_solved, mask_inv)\n",
+        "  large_img_bg = cv2.bitwise_and(img, mask_inv)\n",
         "\n",
         "  # Take only region of the warped image\n",
         "  small_img_fg = cv2.bitwise_and(warped_img, mask)\n",
         "\n",
         "  # Add the large image background and the small image foreground\n",
-        "  result = cv2.add(large_img_bg, small_img_fg)\n",
+        "  img_solved = cv2.add(large_img_bg, small_img_fg)\n",
         "\n",
-        "  return result"
+        "  return img_solved"
       ],
       "metadata": {
         "id": "69enDfF9gfnn"
@@ -473,14 +477,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "LDCd5ys7yoJe",
-        "outputId": "37ccc1d2-f067-4075-dad0-8d8171bf94ca"
+        "outputId": "e4e7720f-6c9f-41f3-e1be-9f76c649f792"
       },
       "outputs": [
         {
@@ -511,8 +515,7 @@
         "# crop board\n",
         "board, board_points_on_image=get_board(img)\n",
         "board = cv2.resize(board, (1200, 1200), interpolation = cv2.INTER_LINEAR)\n",
-        "cv2_imshow(board)\n",
-        "print(board.shape)"
+        "cv2_imshow(board)"
       ]
     },
     {
@@ -541,8 +544,8 @@
       },
       "outputs": [],
       "source": [
+        "# get cells\n",
         "rectangles=get_cells(board,dilated_mask)\n",
-        "\n",
         "cells=[board[y:y+ h,x:x + w] for (x,y,w,h) in rectangles]\n",
         "\n",
         "# show img of cell numbering\n",
@@ -567,6 +570,7 @@
       },
       "outputs": [],
       "source": [
+        "# get board content\n",
         "puzzle_board=list([get_cell_content(cell) for cell in cells])\n",
         "\n",
         "print(puzzle_board)"
@@ -580,9 +584,8 @@
       },
       "outputs": [],
       "source": [
+        "# create a sudoku game with the board content\n",
         "game = load_sudoku([puzzle_board[i:i+9] for i in range(0, len(puzzle_board), 9)])\n",
-        "sudoku_solution = solve_sudoku(game).board\n",
-        "\n",
         "print(game)"
       ]
     },
@@ -594,11 +597,13 @@
       },
       "outputs": [],
       "source": [
+        "# solve sudoku\n",
+        "sudoku_solution = solve_sudoku(game)\n",
         "sudoku_solution_board=[]\n",
-        "for item in sudoku_solution:\n",
+        "for item in sudoku_solution.board:\n",
         "  sudoku_solution_board  += item\n",
         "\n",
-        "print(sudoku_solution_board, len(sudoku_solution_board))"
+        "print(sudoku_solution)"
       ]
     },
     {
@@ -609,21 +614,22 @@
       },
       "outputs": [],
       "source": [
-        "board_solved = put_solution_on_board(board, rectangles, puzzle_board)\n",
+        "# put solution on board image\n",
+        "board_solved = put_solution_on_board(board, rectangles, sudoku_solution_board, puzzle_board)\n",
         "\n",
         "cv2_imshow(board_solved)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "0TqVD2FQbMt6",
-        "outputId": "948a048d-4519-47ac-e539-6b41f8702699"
+        "outputId": "92bc7d9c-32dc-4f75-8c5e-fb9f5597fae0"
       },
       "outputs": [
         {
@@ -638,6 +644,7 @@
         }
       ],
       "source": [
+        "# put the solved board on the original image\n",
         "img_solved = put_board_on_image(img, board_points_on_image, board_solved)\n",
         "\n",
         "cv2_imshow(img_solved)"
@@ -649,10 +656,11 @@
       "collapsed_sections": [
         "uJBffQIDAFdz",
         "JrTGRPGNB-5t",
+        "p-Dh6a0FAk8Y",
         "_TJ8cpaVMB18"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyM5w8HtH8FvShe52/8NAoWg",
+      "authorship_tag": "ABX9TyO2VZU5+OtzveBFUWZzTA5F",
       "include_colab_link": true
     },
     "kernelspec": {
