--- a/sudoku_solver_2_0.ipynb
+++ b/sudoku_solver_2_0.ipynb
@@ -26,15 +26,15 @@
         "\n",
         "**How To Use**\n",
         "\n",
-        "1. upload image\n",
-        "2. run imports\n",
-        "3. run functions\n",
-        "4. run algorethms\n",
+        "1. run imports\n",
+        "2. upload an image via URL\n",
+        "3. create functions\n",
+        "4. run algorithms\n",
         "\n",
         "---\n",
         "\n",
         "**How It Works**\n",
-        "\n",
+        "* will be added\n",
         "1. extraction board\n",
         "  1. finding biggest square\n",
         "  2.\n",
@@ -660,7 +660,7 @@
         "_TJ8cpaVMB18"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyO2VZU5+OtzveBFUWZzTA5F",
+      "authorship_tag": "ABX9TyOHVgLn0G2Ihutt7gNjRkDL",
       "include_colab_link": true
     },
     "kernelspec": {
