--- a/sudoku_solver_2_0.ipynb
+++ b/sudoku_solver_2_0.ipynb
@@ -18,9 +18,7 @@
       "source": [
         "# Introduction\n",
         "\n",
-        "**in development!! not done**\n",
-        "\n",
-        "sudoku solver using openCV, pytesseract and py-sudoku to find solution of sudoku from image\n",
+        "This is a Sudoku solver that uses OpenCV, Pytesseract, and Py-Sudoku to solve a Sudoku puzzle from an image\n",
         "\n",
         "---\n",
         "\n",
@@ -34,7 +32,8 @@
         "---\n",
         "\n",
         "**How It Works**\n",
-        "* will be added\n",
+        "\n",
+        "*will be added*\n",
         "1. extraction board\n",
         "  1. finding biggest square\n",
         "  2.\n",
@@ -660,7 +659,7 @@
         "_TJ8cpaVMB18"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyOHVgLn0G2Ihutt7gNjRkDL",
+      "authorship_tag": "ABX9TyNN/CIQZB5V02mCWorNeIy7",
       "include_colab_link": true
     },
     "kernelspec": {
