--- a/sudoku_solver_2_0.ipynb
+++ b/sudoku_solver_2_0.ipynb
@@ -443,12 +443,9 @@
       },
       "outputs": [],
       "source": [
-        "puzzle = Sudoku(3).difficulty(0.5)\n",
         "def load_sudoku(board):\n",
         "  [board[i:i+9] for i in range(0, len(board), 9)]\n",
-        "  return Sudoku(3, 3, board=board)\n",
-        "def solve_sudoku(sudoku):\n",
-        "  return sudoku.solve()"
+        "  return Sudoku(3, 3, board=board)"
       ]
     },
     {
@@ -459,10 +456,8 @@
       },
       "outputs": [],
       "source": [
-        "game = load_sudoku(puzzle.board)\n",
-        "print(game.board)\n",
-        "print(solve_sudoku(game).board)\n",
-        "print(solve_sudoku(game))"
+        "def solve_sudoku(sudoku):\n",
+        "  return sudoku.solve()"
       ]
     },
     {
@@ -655,11 +650,10 @@
       "collapsed_sections": [
         "uJBffQIDAFdz",
         "JrTGRPGNB-5t",
-        "p-Dh6a0FAk8Y",
-        "_TJ8cpaVMB18"
+        "p-Dh6a0FAk8Y"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyNN/CIQZB5V02mCWorNeIy7",
+      "authorship_tag": "ABX9TyN8ifTCkzFDiZ4u0n7gpEV7",
       "include_colab_link": true
     },
     "kernelspec": {
