--- a/sudoku_solver_2_0.ipynb
+++ b/sudoku_solver_2_0.ipynb
@@ -24,10 +24,10 @@
         "\n",
         "**How To Use**\n",
         "\n",
-        "1. run imports\n",
-        "2. upload an image via URL\n",
-        "3. create functions\n",
-        "4. run algorithms\n",
+        "1. Run imports\n",
+        "2. Upload an image via URL\n",
+        "3. Create functions\n",
+        "4. Run program\n",
         "\n",
         "---\n",
         "\n",
@@ -36,10 +36,20 @@
         "*will be added*\n",
         "1. extraction board\n",
         "  1. finding biggest square\n",
-        "  2.\n",
         "2. filtering cells\n",
-        "  1.\n",
-        "  2.\n"
+        "  1. find cells borders\n",
+        "  2. extract cells from board\n",
+        "  3. order the cells by their positions\n",
+        "3. find cells content\n",
+        "  1. check if empty\n",
+        "  2. if not empty use Pytesseract OCR\n",
+        "4. solve the sudoku\n",
+        "  1. put board on Py-Sudoku\n",
+        "  2. solve the Py-Sudoku\n",
+        "5. put the solution back on the image\n",
+        "  1. put the solution on the board\n",
+        "  2. put the solved board on the original image\n",
+        "\n"
       ]
     },
     {
@@ -466,12 +476,12 @@
         "id": "mxTCQ2GBMAXl"
       },
       "source": [
-        "# Program"
+        "italicized text# Program"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -616,7 +626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -653,7 +663,7 @@
         "p-Dh6a0FAk8Y"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyN8ifTCkzFDiZ4u0n7gpEV7",
+      "authorship_tag": "ABX9TyMb2su1viPmU8lAfb8xlTmB",
       "include_colab_link": true
     },
     "kernelspec": {
